# Collision

./: README.md  Readme.md  Stupid_Three_body.cpp
Collision/: CMakeCache.txt  CMakeLists.txt  Configure-UNIX  Configure-Win-msys32  Configure-Win-msys64  Configure.UNIX  Configure.Win.msys64  Makefile  Modelcube.txt  Modelcuboid.txt  Modelellipsoid.txt  Modelsphere.txt  Readme.md  SoundEff.txt  Texture.txt  cmake_install.cmake  collision.cpp  display.cpp  draw.cpp  event.cpp  exmodel.txt  game.cpp  global.cpp  global.hpp  main.cpp  makefile  material.txt  model.txt  run  test_branch.md  update.cpp
Collision/Models/: Modelcube.txt  Modelcuboid.txt  Modelellipsoid.txt  Modelellipsoid_large.txt  Modelellipsoid_small.txt  Modelsphere.txt  Modelsphere_large.txt  Modelsphere_small.txt
Collision/Pics/: Readme.md
Desktop/programs/: c-四则运算-long double.c  c-四则运算.c
Desktop/programs/java_test/: HelloWorld.java  openjudge-2751-unfinished.java
Desktop/programs/online_judge/: fail_codes.cp
Desktop/programs/online_judge/dp/: poj-1836-LIS.cp  poj-2924-dp.cp  poj-3120-dp.cp  poj-4008-dp.cp
Desktop/programs/online_judge/二分检索/: poj-2318-二分.cp  poj-2456-二分.cp
Desktop/programs/online_judge/代数/数论/: poj-1061-裴蜀定理-ex_gcd.cp  poj-2925-整除7的黑科技.cp  poj-4010-a^b mod c的周期.cp
Desktop/programs/online_judge/代数/数论/组合数学/: poj-2987-卢卡斯定理.cp  poj-4036--快速幂+组合取模(费马小定理).cp
Desktop/programs/online_judge/各种数据结构/heap/: 最小堆类.cp
Desktop/programs/online_judge/各种数据结构/stack/: poj-四则运算.cp
Desktop/programs/online_judge/各种数据结构/trie/: poj-2797-trie.cp
Desktop/programs/online_judge/各种数据结构/图论/最短路/dijkstra/: poj-4083.cp
Desktop/programs/online_judge/各种数据结构/图论/最短路/floyd/: poj-1125-floyd.cp
Desktop/programs/online_judge/各种数据结构/并查集/: poj-1611.cp  poj-1703.cp  poj-2524.cp  并查集模版.cp
Desktop/programs/online_judge/字符串相关/: Sunday算法.cp  poj-2406-字符串特征向量.cp  求最长回文子串长度.cp
Desktop/programs/online_judge/排序/: poj-1002.cp  poj-4031-归并.cp  归并排序.cp
Desktop/programs/online_judge/搜索/bfs/: poj-1184-TLE.cp
Desktop/programs/online_judge/搜索/bfs/A_star/: poj-1077-BFS+A_star.cp  poj-4116.cp
Desktop/programs/online_judge/搜索/bfs/直接bfs/: poj-2251-bfs.cp
Desktop/programs/online_judge/搜索/dfs/: poj-1088-advanced.cp  poj-1154.cp  poj-4076-dfs.cp  poj-sodoku.cp
Desktop/programs/online_judge/暴力枚举/: 24点.cp  poj-1051.cp  poj-1647.cp  poj-2813-枚举.cp  poj-4021.cp  poj-4143-map.cp  poj-4146-打表大法好.cp
Desktop/programs/online_judge/模拟/: poj-魔兽世界.cp
Desktop/programs/online_judge/高精度/: poj-1001.cp  poj-2706-高精度+快速幂.cp  poj-2731-高精度乘法-大进制.cp
Desktop/programs/testtest/: main.cp
ModelGenerator/: CubeGen.cpp  CuboidGen.cpp  EllipsoidGen.cpp  Modelsphere.txt  Readme.md  SphereGen.cpp  cube.txt  cuboid.txt  generate_flags.cpp  generate_normal_vector.cpp  regenerate.cpp  sphere.txt
sample/: cube.cpp  cube_lighting.cpp  cube_mouse_control.cpp
stupid_homework/: solarsys_lighting_mouse.cpp
stupid_three_body/: makefile  three_body  three_body.cpp
